--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
                 <h3>5. Lack of Regulation and Transparency</h3>
                 <p>The rapid deployment of Flock cameras has outpaced meaningful public oversight and regulation. Often, the policies governing the use and retention of data are unclear or non-existent, varying significantly by jurisdiction. Community members are frequently left in the dark about how their data is being collected, stored, and used.</p>
             </div>
+            <div class="concern-item">
+                <h3>more info:</h3>
+                <p>https://consumerrights.wiki/index.php?title=Flock_License_Plate_Readers</p>
+            </div>
+
+
+
+            
         </section>
 
         <hr>
@@ -52,8 +60,8 @@
         <section class="videos">
             <h2>Videos and Media</h2>
             <div class="video-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <h4>Video Title 1: The Problem with Flock Cameras</h4>
+                <iframe width="560" height="315" src="https://www.youtube.com/watch?v=4RM09nKczVs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <h4>Taxpayer funded AI surveillance: why Flock's 30000 cameras have to go</h4>
                 <p>An investigative report on the privacy implications of the Flock network.</p>
             </div>
             <div class="video-container">
