--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <section class="videos">
             <h2>Videos and Media</h2>
             <div class="video-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/watch?v=4RM09nKczVs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/4RM09nKczVs?si=v_JpwjLaXIZF0g3K" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <h4>Taxpayer funded AI surveillance: why Flock's 30000 cameras have to go</h4>
                 <p>An investigative report on the privacy implications of the Flock network.</p>
             </div>
