--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
             <div class="concern-item">
                 <h3>more info:</h3>
-                <a><p>https://consumerrights.wiki/index.php</p></a>
+                <p><a>https://consumerrights.wiki/index.php?title=Flock_License_Plate_Readers</a></p>
             </div>
 
 
@@ -65,14 +65,14 @@
                 <p>An investigative report on the privacy implications of the Flock network.</p>
             </div>
             <div class="video-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_2" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/WkFBao0vCLs?si=16qdTUCBTWbK_vbr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <h4>Video Title 2: A Personal Story of a False Alarm</h4>
                 <p>A first-hand account of being wrongfully detained due to a Flock camera error.</p>
             </div>
             <div class="video-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_3" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <h4>Video Title 3: The Broader Surveillance Network</h4>
-                <p>An expert discussion on how Flock's technology fits into a larger trend of mass surveillance.</p>
+                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/9IFMZA6Iap0?si=9by1bKCTqXB47w-P" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <h4>America’s Surveillance State | Your Privacy is Dead - Here's Who's Tracking You</h4>
+                <p>A documentary about flock and similar systems that expose wide spread use of AI powered servalince tools and how they effect YOUR privacy</p>
             </div>
         </section>
 
