--- a/index.html
+++ b/index.html
@@ -65,15 +65,16 @@
                 <p>An investigative report on the privacy implications of the Flock network.</p>
             </div>
             <div class="video-container">
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/WkFBao0vCLs?si=16qdTUCBTWbK_vbr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                <h4>Video Title 2: A Personal Story of a False Alarm</h4>
-                <p>A first-hand account of being wrongfully detained due to a Flock camera error.</p>
-            </div>
-            <div class="video-container">
                 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/9IFMZA6Iap0?si=9by1bKCTqXB47w-P" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <h4>America’s Surveillance State | Your Privacy is Dead - Here's Who's Tracking You</h4>
                 <p>A documentary about flock and similar systems that expose wide spread use of AI powered servalince tools and how they effect YOUR privacy</p>
             </div>
+            <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/WkFBao0vCLs?si=16qdTUCBTWbK_vbr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <h4>Gov't Surveillance Cameras Found in 7 SHOCKING Spots</h4>
+                <p>Covers the Fourth Amendment problems with this unregulated mass surveillance</p>
+            </div>
+            
         </section>
 
         <hr>
