--- a/index.html
+++ b/index.html
@@ -45,10 +45,7 @@
                 <h3>5. Lack of Regulation and Transparency</h3>
                 <p>The rapid deployment of Flock cameras has outpaced meaningful public oversight and regulation. Often, the policies governing the use and retention of data are unclear or non-existent, varying significantly by jurisdiction. Community members are frequently left in the dark about how their data is being collected, stored, and used.</p>
             </div>
-            <div class="concern-item">
-                <h3>more info:</h3>
-                <p><a>https://consumerrights.wiki/index.php?title=Flock_License_Plate_Readers</a></p>
-            </div>
+            
 
 
 
@@ -58,7 +55,14 @@
         <hr>
 
         <section class="videos">
-            <h2>Videos and Media</h2>
+            <h2>Videos and Resources</h2>
+
+            <div class="concern-item">
+                <h3>more info:</h3>
+                <p><a>https://consumerrights.wiki/index.php?title=Flock_License_Plate_Readers</a></p>
+                <p><a>https://plateprivacy.com/</a></p>
+            </div>
+            
             <div class="video-container">
                 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/4RM09nKczVs?si=v_JpwjLaXIZF0g3K" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <h4>Taxpayer funded AI surveillance: why Flock's 30000 cameras have to go</h4>
